--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 heuristic/
-lib/
 minecraft/
 starrail/
 test/
 .vscode/settings.json
 __pycache__/pypyjit.cpython-310.pyc
-output.txt
 answer.py
 answer_bf.py
 input.txt
 temp1.py
+temp2.py
